make changes to report

--- a/templates/reportgeneration.html
+++ b/templates/reportgeneration.html
@@ -44,8 +44,8 @@
                 </div>
                 <div class="box-auto">
                     {% if t_length != 0 %}
-                    INSERT TIME NOW HERE
-                    <div style="font-size: 18px">VENDOR NAME</div>
+                    <div id="time"></div>
+                    <div style="font-size: 18px">{{vendor_requested.name}}</div>
                     {% endif %}
                     <table>
 
