--- a/templates/registration.html
+++ b/templates/registration.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registration</title>
+    <title>Account Management</title>
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" />
     <script src="../static/js/register.js"></script>
 </head>
@@ -17,7 +17,7 @@
                 <div class="link">TRANSACTIONS</div>
             </a>
             <a class="active" href="#">
-                <div class="link">REGISTRATION</div>
+                <div class="link">ACCOUNTS</div>
             </a>
             <a href="/report">
                 <div class="link">REPORTS</div>
@@ -27,12 +27,12 @@
             <div class="header">
                 <div class="left-align">
                     <!-- <button id="finalize" type="button" onclick="finalize()">FINISH</button> -->
-                    <button id="client-reg" class="tab active" type="button" onclick="client()">CLIENTS</button>
-                    <button id="vendor-reg" class="tab" type="button" onclick="vendor()">VENDORS</button>
+                    <!-- <button id="manage-tab" class="tab" type="button" onclick="management()">MANAGEMENT</button> -->
+                    <!-- <button id="register-tab" class="tab active" type="button" onclick="registration()">REGISTRATION</button> -->
                 </div>
             </div>
-            <div class="content">
-                <div id="client-container" class="box-auto">
+            <div class="content-flex">
+                <div id="client-container" class="box-50">
                     <form id="client-form">
                         <div class="client-header">REGISTER NEW CLIENT</div>
                         <div class="label-input">
@@ -54,8 +54,25 @@
                             <button id="client-add" type="button" onclick="registerClient()">add</button>
                         </div>
                     </form>
+                    <hr/>
+                    <div class="container">
+                        <table>
+                            <tr class="client">
+                                <td style="width: 40%">name (id)</td>
+                                <td style="width: 20%">contact</td>
+                                <td style="width: 20%">initial balance</td>
+                                <td style="width: 20%">balance (pending)</td>
+                            </tr>
+                            <tr class="client">
+                                    <td style="width: 40%">name (id)</td>
+                                    <td style="width: 20%">contact</td>
+                                    <td style="width: 20%">initial balance</td>
+                                    <td style="width: 20%">balance (pending)</td>
+                                </tr>
+                        </table>
+                    </div>
                 </div>
-                <div id="vendor-container" class="box-auto" style="display: none">
+                <div id="vendor-container" class="box-50" >
                     <form id="vendor-form">
                         <div class="vendor-header">REGISTER NEW VENDOR  </div>
                         <div class="label-input">
@@ -72,6 +89,17 @@
                             <button id="vendor-add" type="button" onclick="registerVendor()">add</button>
                         </div>
                     </form>
+                    <hr/>
+                    <div class="container">
+                        <table>
+                            <tr>
+                                <td style="width: 40%">name (id)</td>
+                                <td style="width: 20%">contact</td>
+                                <td style="width: 20%">business type</td>
+                                <td style="width: 20%">balance (pending)</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
