--- a/templates/reportgeneration.html
+++ b/templates/reportgeneration.html
@@ -18,7 +18,7 @@
                 <div class="link">TRANSACTIONS</div>
             </a>
             <a href="/">
-                <div class="link">REGISTRATION</div>
+                <div class="link">ACCOUNTS</div>
             </a>
             <a class="active" href="#">
                 <div class="link">REPORTS</div>
@@ -80,10 +80,12 @@
                     {% if t_length != 0 %}
                     <hr />
                     <div class="total">
-                        TOTAL:
-                        <span style="float: right">
-                            {{t_total}}
-                        </span>
+                        <table>
+                            <tr>
+                                <td style="width: 80%; text-align: left" colspan="2">TOTAL:</td>
+                                <td style="width: 20%; text-align: center">{{t_total}}</td>
+                            </tr>
+                        </table>
                     </div>
                     {% endif %}
                 </div>
