--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     font-family: sans-serif;
     font-size: 15px;
-    /* outline: 1px solid red; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #container {
@@ -19,8 +19,8 @@
 #sidebar a {
     background: transparent;
     display: block;
-    min-height: 72px;
-    line-height: 72px;
+    min-height: 64px;
+    line-height: 64px;
     width: 90%;
     margin: auto;
     border-radius: 8px;
@@ -55,13 +55,24 @@
 }
 
 .header {
-    height: 8vh;
-    min-height: 42px;
+    min-height: 56px;
 }
 
 #main .header {
     background: #fff;
     border-bottom: 1px solid #ddd;
+    display: flex;
+}
+
+.left-align {
+    line-height: 56px;
+    flex: 1 0 auto;
+    margin-left: 2vw;
+    font-size: 18px;
+}
+.right-align {
+    line-height: 56px;
+    margin-right: 2vw;
 }
 
 .tab {
@@ -91,10 +102,10 @@
 }
 
 button {
-    border: none;
+    border: 1px solid #eee;
     border-radius: 8px;
     margin: 1vh 0;
-    padding: 16px 24px;
+    padding: 8px 16px;
     background: rgba(198, 140, 219, 0.1);
     color: #555;
     transition: 0.2s ease-in-out background-color, 0.2s ease-in-out color;
@@ -102,23 +113,8 @@ button {
 
 button:hover {
     cursor: pointer;
-    color: #a542b9;
+    color: #bf6cd7;
     background: rgba(198, 198, 219, 0.4);
-}
-
-/* TODO display left-align and right-align on same line */
-.header .left-align, .header .right-align {
-    line-height: 8vh;
-}
-
-.header .left-align {
-    height: 100%;
-    margin-left: 2vw;
-}
-
-.header .left-align {
-    height: 100%;
-    margin-right: 2vw;
 }
 
 .content, .content-flex {
@@ -181,8 +177,8 @@ form {
 
 table {
     width : 100%;
-    border-radius: 8px;
     border-collapse: collapse;
+    border: 1px solid #eee;
 }
 
 table th {
@@ -195,8 +191,8 @@ table td {
 }
 
 table tr {
-    /* border-top: 1px solid #ddd; */
-    /* border-bottom: 1px solid #ddd; */
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
     background: rgba(198, 198, 219, 0.1);
 }
 
@@ -252,3 +248,60 @@ hr {
     min-height: 2px;
     margin: 8px 0;
 }
+
+ .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    line-height: 34px;
+    margin-left: 8px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .2s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .2s;
+}
+
+input:checked + .slider {
+    background-color: #bf6cd7;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #bf6cd7;
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+} 
