add header titles

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -26,9 +26,7 @@
         <div id="main">
             <div class="header">
                 <div class="left-align">
-                    <!-- <button id="finalize" type="button" onclick="finalize()">FINISH</button> -->
-                    <!-- <button id="manage-tab" class="tab" type="button" onclick="management()">MANAGEMENT</button> -->
-                    <!-- <button id="register-tab" class="tab active" type="button" onclick="registration()">REGISTRATION</button> -->
+                    ACCOUNT MANAGEMENT
                 </div>
             </div>
             <div class="content-flex">
@@ -54,7 +52,7 @@
                             <button id="client-add" type="button" onclick="registerClient()">add</button>
                         </div>
                     </form>
-                    <hr/>
+                    <hr />
                     <div class="container">
                         <table>
                             <tr class="client">
@@ -64,17 +62,17 @@
                                 <td style="width: 20%">balance (pending)</td>
                             </tr>
                             <tr class="client">
-                                    <td style="width: 40%">name (id)</td>
-                                    <td style="width: 20%">contact</td>
-                                    <td style="width: 20%">initial balance</td>
-                                    <td style="width: 20%">balance (pending)</td>
-                                </tr>
+                                <td style="width: 40%">name (id)</td>
+                                <td style="width: 20%">contact</td>
+                                <td style="width: 20%">initial balance</td>
+                                <td style="width: 20%">balance (pending)</td>
+                            </tr>
                         </table>
                     </div>
                 </div>
-                <div id="vendor-container" class="box-50" >
+                <div id="vendor-container" class="box-50">
                     <form id="vendor-form">
-                        <div class="vendor-header">REGISTER NEW VENDOR  </div>
+                        <div class="vendor-header">REGISTER NEW VENDOR </div>
                         <div class="label-input">
                             Name
                             <input placeholder="Business name" id="vendor-name" type="text" class="text-input"
@@ -89,7 +87,7 @@
                             <button id="vendor-add" type="button" onclick="registerVendor()">add</button>
                         </div>
                     </form>
-                    <hr/>
+                    <hr />
                     <div class="container">
                         <table>
                             <tr>
