--- a/templates/reportgeneration.html
+++ b/templates/reportgeneration.html
@@ -26,6 +26,9 @@
         </div>
         <div id="main">
             <div class="header">
+                <div class="left-align">
+                    REPORT GENERATION
+                </div>
             </div>
             <div class="content-flex">
                 <div class="box-30">
