--- a/templates/reportgeneration.html
+++ b/templates/reportgeneration.html
@@ -20,7 +20,7 @@
             <a href="/">
                 <div class="link">ACCOUNTS</div>
             </a>
-            <a class="active" href="#">
+            <a class="active" href="/report">
                 <div class="link">REPORTS</div>
             </a>
         </div>
@@ -48,7 +48,7 @@
                 <div class="box-auto">
                     {% if t_length != 0 %}
                     <div id="time"></div>
-                    <div style="font-size: 18px">{{vendor_requested.name}}</div>
+                    <div style="font-size: 16px">{{vendor_requested.name}}</div>
                     {% endif %}
                     <table>
 
