--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -33,7 +33,7 @@
                     STATUS
                     <label class="switch">
                         <!-- change with document.getElementById("node-status").setAttribute("checked", "true/false") -->
-                        <input id="node-status" type="checkbox" onclick="toggleNode()">
+                        <input id="node-status" type="checkbox" onclick="toggleNode(this)">
                         <span class="slider round"></span>
                     </label>
                 </div>
